@@ -239,6 +239,7 @@ typedef struct __dc1394_cam_cap_struct
     int dma_frame_size;
     int num_dma_buffers;
     int dma_last_buffer;
+    char * dma_device_file;
 } dc1394_cameracapture ;
 
 typedef struct __dc1394_misc_info
